# Talk2Data

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start_all.sh
src/: README.md  pyproject.toml
src/agent/: AgentSkills.py  DataFetcherAgent.py  PandasAIAgent.py  QueryParserAgent.py  Workflow.py  api_workflow.py  columnnames_standard.json  db_columns_explained.json  db_columns_names.json  sw.csv  sw.json  test_aliases.py
src/agent/config/: anthropic_claude_config.py  config_utils.py  llm_config.py  matplotlib_config.py
src/agent/prompt/: DatafetcherAgent_prompt.yaml  PDA_understanding_prompt.yaml  PandasAIAGENT_prompt.yaml  QPA_extract_prompt.yaml
src/api/: __init__.py  api.py  deps.py  integration_guide.md
src/api/endpoints/: __init__.py  auth.py  chat.py  user.py
src/core/: config.py  security.py
src/db/: base.py  session.py
src/db/crud/: __init__.py  conversation.py  job.py  message.py  user.py
src/db/migrations/: env.py
src/db/migrations/versions/: 08092b75dfab_remove_server_default_from_conversation_.py  5746ddc41b4e_create_user_table.py  609376f7a82c_use_statement_timestamp_for_.py  d3e541de52ac_add_conversation_message_job_tables.py
src/db/models/: __init__.py  conversation.py  job.py  message.py  user.py
src/schemas/: __init__.py  conversation.py  job.py  message.py  token.py  user.py
src/tasks/: __init__.py  celery_app.py  financial_query.py  history_version.py
src/web/: package-lock.json  package.json  vite.config.ts
src/web/src/: App.tsx  index.css
src/web/src/components/auth/: AuthForm.tsx  ProtectedRoute.tsx
src/web/src/components/chat/: ChatInput.tsx  ChatInterface.tsx  ContentDisplay.tsx  DataTable.tsx  ImageViewer.tsx  MarkdownRenderer.tsx  Message.tsx  ProgressBar.tsx
src/web/src/components/layout/: Layout.tsx  MainLayout.tsx  Navbar.tsx  Sidebar.tsx
src/web/src/contexts/: AuthContext.tsx  ChatContext.tsx
src/web/src/hooks/: useAuth.ts  useChat.ts
src/web/src/lib/: api.ts  axios.ts
src/web/src/pages/: ApiTestPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
src/web/src/routes/: index.tsx
src/web/src/types/: auth.ts  chat.ts
src/web/src/utils/: tokenStore.ts
